añade una sección con un formulario

--- a/index.html
+++ b/index.html
@@ -6,5 +6,96 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+
+
+    <section>
+      <h2>Consulta de ventas</h2>
+      <form action="#" method="post" class="seccion__formulario">
+        <div>
+          <label for="nombre-completo" class="formulario__label"
+            ><span>1. </span>Nombre completo</label
+          >
+        </div>
+        <div>
+          <input
+            type="text"
+            name="nombre-completo"
+            id="nombre-completo"
+            class="formulario__input"
+          />
+        </div>
+        
+        <div>
+          <label for="pregunta-1" class="formulario__label"
+            ><span>2. </span>¿Cuál de nuestros productos le interesaría?</label
+          >
+        </div>
+        <div>
+          <input
+            type="text"
+            name="pregunta-1"
+            id="pregunta-1"
+            class="formulario__input"
+          />
+        </div>
+
+        <div>
+          <label for="pregunta-2" class="formulario__label"
+            ><span>3. </span>Cuéntenos más sobre lo que le gustaría para que
+            podamos encontrar el producto perfecto para sus necesidades</label
+          >
+        </div>
+        <div>
+          <input
+            type="text"
+            name="pregunta-2"
+            id="pregunta-2"
+            class="formulario__input"
+          />
+        </div>
+
+        <div>
+          <label for="telefono" class="formulario__label"
+            ><span>4. </span>Número de teléfono</label
+          >
+        </div>
+        <div>
+          <input
+            type="tel"
+            name="telefono"
+            id="telefono"
+            class="formulario__input"
+          />
+        </div>
+
+        <div>
+          <label for="fecha-disponible" class="formulario__label"
+            ><span>5. </span>Fecha disponible para una llamada</label
+          >
+        </div>
+        <div>
+          <input
+            type="date"
+            name="fecha-disponible"
+            id="fecha-disponible"
+            class="formulario__input"
+          />
+        </div>
+
+        <div>
+          <label for="email" class="formulario__label"
+            ><span>6.</span> Dirección de correo electrónico</label
+          >
+        </div>
+        <div>
+          <input type="email" id="email" class="formulario__input" />
+        </div>
+
+        <div>
+          <button type="submit">Enviar</button>
+        </div>
+      </form>
+    </section>
+  </body>
 </html>
